@@ -1,3 +1,7 @@
+2002-03-19  Lauris Kaplinski  <lauris@ximian.com>
+
+	* capplet-dir.c (find_icon): Do not do nasty things with NULL
+
 2002-03-12  Richard Hestilow  <hestilow@ximian.com>
 
 	* capplet-dir-view.h: Move CappletDirViewLayout enum here,
