@@ -1,3 +1,8 @@
+2002-03-19  Lauris Kaplinski  <lauris@ximian.com>
+
+	* gnome-keyboard-properties.c (bell_to_widget): Check that
+	value actually is string - that fixes crash with broken schemas
+
 2002-03-10  Seth Nickell  <snickell@stanford.edu>
 
 	* gnome-keyboard-properties.c: (main):
